Fix spacing in edit preset dialog (#5957)

--- a/modules/web/src/app/settings/admin/presets/dialog/style.scss
+++ b/modules/web/src/app/settings/admin/presets/dialog/style.scss
@@ -15,3 +15,8 @@
 .create-button {
   margin-left: 10px;
 }
+
+.km-dialog-context-description {
+  margin-left: 24px;
+  margin-right: 24px;
+}
